Logo en etiquetas

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html lang="es">
   <head>
+    <!-- Open Graph Meta Tags para compartir en redes sociales (WhatsApp, Facebook, etc.) -->
+<meta property="og:title" content="Yucaguia | Descubre la magia de Yucatán">
+<meta property="og:description" content="Tu compañero de viaje para explorar los mejores sitios, lugares para comer y actividades en Mérida.">
+<meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/galo-2fb12.firebasestorage.app/o/Gemini_Generated_Image_at9sytat9sytat9s.png?alt=media&token=52f4307b-cacf-469f-b9e5-b3736910a332">
+<meta property="og:url" content="URL de tu sitio web">
+<meta property="og:type" content="website">
+<!-- Meta Tag para Twitter (opcional) -->
+<meta name="twitter:card" content="summary_large_image">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yucaguia</title>
